RESOLVED FIXED175889
Fix -Wcast-qual warnings in JavaScriptCore with new clang compiler
https://bugs.webkit.org/show_bug.cgi?id=175889
Summary Fix -Wcast-qual warnings in JavaScriptCore with new clang compiler
David Kilzer (:ddkilzer)
Reported 2017-08-23 10:37:24 PDT
A new clang compiler has stricter -Wcast-qual warnings, so there are a couple places where we need to cast differently. Tracked by <rdar://problem/33667497>, but there will be multiple bugs filed to fix this, so I'm not adding "InRadar" keyword.
Attachments
Patch (2.88 KB, patch)
2017-08-23 10:47 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2017-08-23 10:42:29 PDT
David Kilzer (:ddkilzer)
Comment 2 2017-08-23 10:44:31 PDT
(In reply to David Kilzer (:ddkilzer) from comment #0) > Tracked by <rdar://problem/33667497>, but there will be multiple bugs filed > to fix this, so I'm not adding "InRadar" keyword. Except a radar will be created automatically when this bug is fixed, so adding it anyway.
David Kilzer (:ddkilzer)
Comment 3 2017-08-23 10:47:32 PDT
Mark Lam
Comment 4 2017-08-23 10:51:18 PDT
Comment on attachment 318884 [details] Patch r=me if EWS is happy.
WebKit Commit Bot
Comment 5 2017-08-23 13:14:41 PDT
Comment on attachment 318884 [details] Patch Clearing flags on attachment: 318884 Committed r221097: <http://trac.webkit.org/changeset/221097>
WebKit Commit Bot
Comment 6 2017-08-23 13:14:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.