Fix -Wcast-qual warnings in JavaScriptCore with new clang compiler <https://webkit.org/b/175889> <rdar://problem/33667497>

Reviewed by Mark Lam.

* API/ObjCCallbackFunction.mm:
(JSC::objCCallbackFunctionCallAsConstructor): Use
const_cast<JSObjectRef>() since JSValueRef is const while
JSObjectRef is not.
* API/tests/CurrentThisInsideBlockGetterTest.mm:
(+[JSValue valueWithConstructorDescriptor:inContext:]): Use
const_cast<void*>() since JSObjectMake() takes a void*, but
CFBridgingRetain() returns const void*.


Canonical link: https://commits.webkit.org/192551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221097 268f45cc-cd09-0410-ab3c-d52691b4dbfc